# Enviromation

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.next/cache/: config.json
.next/cache/webpack/client-development/: 1.pack  11.pack  12.pack  13.pack  14.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  index.pack  index.pack.old
.next/cache/webpack/server-development/: 0.pack  1.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  index.pack  index.pack.old
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/static/chunks/: webpack.js
.next/static/chunks/pages/: index.js
.next/static/webpack/: webpack.284f38689e40fcdf59b7.hot-update.js  webpack.516b3cb78fb64ed36416.hot-update.js  webpack.5f277a1dda99f3de02ef.hot-update.js  webpack.69fab0abd60723d4a681.hot-update.js  webpack.753cabf8021a5259c2e4.hot-update.js  webpack.8c1b96fa0f9c5d199859.hot-update.js  webpack.8c587bcb23bd8cda4476.hot-update.js  webpack.90843909285fd18deb31.hot-update.js  webpack.b63cc07dee3fdae20b32.hot-update.js  webpack.c256a00364bd3ce6a315.hot-update.js  webpack.d14870b879316953227d.hot-update.js  webpack.ea019e5bc405e0279087.hot-update.js  webpack.f57f7529e35f66324cf3.hot-update.js
.next/static/webpack/pages/: index.284f38689e40fcdf59b7.hot-update.js  (+11 more)
components/: footer.jsx  hero.jsx  impact.jsx  info.jsx  issues.jsx  issuesinfo.jsx  navbar.jsx  panel.jsx
pages/: _app.jsx  impacts.jsx  index.jsx  issues.jsx  solutions.jsx
styles/: global.css
templates/: inventory.jsx  meal.jsx
